tests/language_modules/10_expressions/valid/unary_not.vf
module UnaryNot

procedure main()
is
    let ready: Boolean = false
    check not ready
end main

end UnaryNot