tests/language_modules/10_expressions/invalid_semantics/equality_type_mismatch.vf
module EqualityTypeMismatch

procedure main()
is
    check "ready" = 1
end main

end EqualityTypeMismatch